Project LSPPT {
  database_type: 'PostgreSQL'
  Note: 'Employee Daily Task Progress Tracking'
}

Table employees {
  id bigint [pk, increment]
  name varchar(100) [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table tasks {
  id bigint [pk, increment]
  employee_id bigint [not null]
  clickup_task_id varchar(100)
  title varchar(255) [not null]
  clickup_url text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (employee_id, clickup_task_id) [unique]
  }
}

Table task_progress {
  id bigint [pk, increment]
  task_id bigint [not null]
  date date [not null]
  phase varchar(10) [not null]
  status varchar(50) [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (task_id, date) [unique]
    date
  }
}

Ref: employees.id < tasks.employee_id
Ref: tasks.id < task_progress.task_id